certificates/CiliumNetworkPolicy-cainjector.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cainjector
  namespace: certificates
spec:
  egress:
    - toEntities:
        - host
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: cainjector
  ingress:
    - {}
